# stt-diarization-api

./: .env.example  .gitignore  Dockerfile  audio_utils.py  auth.py  diarization.py  docker-compose.yml  main.py  pyproject.toml  worker.py
