[project]
name = "stt-diarization-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "uvicorn",
  "python-multipart",
  "openai-whisper",
  "torch",
  "torchaudio",
  "celery",
  "redis",
  "pyannote.audio",
  "python-dotenv",
]